--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title> Joke Extention</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <p id="joke-para">Loading...</p>
+        <div> **** made by prince ****</div>
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
